Adaption of FreeCAD to QuarterWidget -removes all soqtviewer references -create a quarter adaptor class which implements missing functionality -adopts freecad code to make use of SoRenderManager and changed View3DInventorViewer  interface

--- a/src/Gui/CMakeLists.txt
+++ b/src/Gui/CMakeLists.txt
@@ -14,16 +14,17 @@ endif(BUILD_VR)
 
 include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}
+    ${CMAKE_CURRENT_SOURCE_DIR}/Quarter
     ${CMAKE_CURRENT_BINARY_DIR}
     ${CMAKE_CURRENT_SOURCE_DIR}/..
     ${CMAKE_CURRENT_BINARY_DIR}/..
     ${CMAKE_CURRENT_BINARY_DIR}/Language
     ${CMAKE_CURRENT_BINARY_DIR}/propertyeditor
     ${CMAKE_CURRENT_BINARY_DIR}/TaskView
+    ${CMAKE_CURRENT_BINARY_DIR}/Quarter
     ${Boost_INCLUDE_DIRS}
     ${COIN3D_INCLUDE_DIR}
     ${PYTHON_INCLUDE_PATH}
-    ${SOQT_INCLUDE_DIR}
     ${XERCESC_INCLUDE_DIR}
     ${QT_INCLUDE_DIR}
     ${ZLIB_INCLUDE_DIR}
@@ -34,8 +35,6 @@ if(MSVC)
          FreeCADApp
          debug ${COIN3D_LIBRARY_DEBUG}
          optimized ${COIN3D_LIBRARY_RELEASE}
-         debug ${SOQT_LIBRARY_DEBUG}
-         optimized ${SOQT_LIBRARY_RELEASE}
          ${QT_DEBUG_LIBRARIES}
          ${QT_LIBRARIES}
          optimized QtUiTools.lib
@@ -47,7 +46,6 @@ else(MSVC)
         FreeCADBase
         FreeCADApp
         ${COIN3D_LIBRARY}
-        ${SOQT_LIBRARIES}
         ${QT_LIBRARIES}
         ${Boost_LIBRARIES}
         ${OPENGL_gl_LIBRARY}
@@ -682,6 +680,17 @@ SET(View3D_SRCS
 )
 SOURCE_GROUP("View3D" FILES ${View3D_SRCS})
 
+#quarter sources
+FILE(GLOB_RECURSE Quarter_CPP_SRC RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} Quarter/*.cpp)
+FILE(GLOB_RECURSE Quarter_H_SRC RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} Quarter/*.h)
+fc_wrap_cpp(Quarter_MOC_SRCS ${Quarter_H_SRC})
+SET(Quarter_SRCS 
+    ${Quarter_CPP_SRC} 
+    ${Quarter_H_SRC}
+    ${Quarter_MOC_SRCS}
+)
+SOURCE_GROUP("Quarter" FILES ${Quarter_SRCS})
+
 # The view provider sources
 SET(Viewprovider_CPP_SRCS
     ViewProvider.cpp
@@ -872,7 +881,7 @@ SET(FreeCADGui_CPP_SRCS
     WaitCursor.cpp
     ManualAlignment.cpp
 )
-SET(FreeCADGui_SRCS
+SET(FreeCADGui_SRCS 
     Application.h
     BitmapFactory.h
     Document.h
@@ -914,6 +923,7 @@ SET(FreeCADGui_SRCS
     ${Task_View_SRCS}
     ${iisTaskPanel_SRCS}
     ${Resource_SRCS}
+    ${Quarter_SRCS}
     ${View3D_SRCS}
     ${Viewprovider_SRCS}
     ${Widget_SRCS}
@@ -943,6 +953,7 @@ if(MSVC)
         ${Editor_CPP_SRCS}
         ${Help_CPP_SRCS}
         ${Inventor_CPP_SRCS}
+        ${Quarter_SRCS}
         ${View3D_CPP_SRCS}
         ${Viewprovider_CPP_SRCS}
         ${Widget_CPP_SRCS}
