--- a/src/Gui/CMakeLists.txt
+++ b/src/Gui/CMakeLists.txt
@@ -185,6 +185,7 @@ set(Gui_MOC_HDRS
     PythonConsole.h
     PythonDebugger.h
     PythonEditor.h
+    QuantitySpinBox.h
     ReportView.h
     SceneInspector.h
     SelectionView.h
@@ -752,6 +753,7 @@ SET(Widget_CPP_SRCS
     PrefWidgets.cpp
     InputField.cpp
     ProgressBar.cpp
+    QuantitySpinBox.cpp
     SpinBox.cpp
     Splashscreen.cpp
     WidgetFactory.cpp
@@ -764,6 +766,7 @@ SET(Widget_HPP_SRCS
     PrefWidgets.h
     InputField.h
     ProgressBar.h
+    QuantitySpinBox.h
     SpinBox.h
     Splashscreen.h
     WidgetFactory.h
