Turned off HIDE_UNDOC_RELATIONS in Doxygen

--- a/src/Doc/BuildDevDoc.cfg.in
+++ b/src/Doc/BuildDevDoc.cfg.in
@@ -1559,7 +1559,7 @@ MSCGEN_PATH            =
 # inheritance and usage relations if the target is undocumented
 # or is not a class.
 
-HIDE_UNDOC_RELATIONS   = YES
+HIDE_UNDOC_RELATIONS   = NO
 
 # If you set the HAVE_DOT tag to YES then doxygen will assume the dot tool is
 # available from the path. This tool is part of Graphviz, a graph visualization
