Revert "remove TKAdvTools"
This reverts commit 678ed32879ac72d803c05ae45f642f698ce98a8d.

--- a/src/3rdParty/salomesmesh/Makefile.am
+++ b/src/3rdParty/salomesmesh/Makefile.am
@@ -21,7 +21,7 @@ endif
 #AM_LDFLAGS = -version-info 1:0:0 -Wl,--no-undefined -L$(OCC_LIB)
 AM_LDFLAGS = -version-info 1:0:0 -L$(OCC_LIB) \
 		-lTKernel -lTKService -lTKMath -lTKBRep -lTKTopAlgo -lTKGeomAlgo \
-		-lTKGeomBase -lTKG3d -lTKG2d -lTKMeshVS -lTKShHealing -lTKPrim
+		-lTKGeomBase -lTKG3d -lTKG2d -lTKMeshVS -lTKShHealing -lTKPrim -lTKAdvTools
 
 #uninstall-local:
 #	-rm -rf $(DESTDIR)$(libdir)
