changes in sketcher
- Varios minor bug fixes.
- Added the other commands to the toolbar.
- Bug fix: missing AbortCommand().
- Mode Auto-switch to edge (Sponssi mode) has selection combo disabled to avoid interferring with this mode.
However, if auto-switch checkbox is unchecked (Jim-Abdullah mode), the combo is enabled and selection of
element type can be effected via the combo with the mouse.

In any case "z" shortcut iterates round robin the "valid types" of the preselected (hovered) element.

--- a/src/Mod/Sketcher/Gui/CMakeLists.txt
+++ b/src/Mod/Sketcher/Gui/CMakeLists.txt
@@ -63,7 +63,7 @@ SET(SketcherGui_SRCS
     Command.cpp
     CommandCreateGeo.cpp
     CommandConstraints.cpp
-    CommandSketcherAccel.cpp
+    CommandSketcherTools.cpp
     CommandAlterGeometry.cpp
     Resources/Sketcher.qrc
     PreCompiled.cpp
