Draft - Allow to export Drawing pages to DXF - fixes #1686
* Uses DXF algos of the Drawing module instead of the Draft dxf library
* Uses a DXF template with the same name as the SVG template, if existing
* Only Draft, Arch, Part and Annotation views are currently supported
* Drawing module's projectToDXF() now returns only a fragment instead of a full DXF file

--- a/src/Mod/Drawing/CMakeLists.txt
+++ b/src/Mod/Drawing/CMakeLists.txt
@@ -20,5 +20,7 @@ INSTALL(
         Templates
     DESTINATION
         ${CMAKE_INSTALL_DATADIR}/Mod/Drawing
-    FILES_MATCHING PATTERN "*.svg*"
+    FILES_MATCHING 
+        PATTERN "*.svg*"
+        PATTERN "*.dxf*"
 )
