--- a/src/Mod/Points/App/CMakeLists.txt
+++ b/src/Mod/Points/App/CMakeLists.txt
@@ -6,6 +6,8 @@ include_directories(
     ${CMAKE_CURRENT_BINARY_DIR}
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${Boost_INCLUDE_DIRS}
+    ${EIGEN3_INCLUDE_DIR}
+    ${PCL_INCLUDE_DIRS}
     ${PYTHON_INCLUDE_PATH}
     ${XERCESC_INCLUDE_DIR}
     ${ZLIB_INCLUDE_DIR}
@@ -13,6 +15,8 @@ include_directories(
 
 set(Points_LIBS
     FreeCADApp
+    ${PCL_LIBRARIES}
+    ${PCL_DEBUG_LIBRARIES}
 )
 
 generate_from_xml(PointsPy)
