--- a/src/Mod/Image/App/CMakeLists.txt
+++ b/src/Mod/Image/App/CMakeLists.txt
@@ -2,8 +2,12 @@ if(WIN32)
     add_definitions(-DFCAppImage)
 endif(WIN32)
 
+if(OPENCV_FOUND)
+    add_definitions(-DHAVE_OPENCV)
+endif(OPENCV_FOUND)
+
 include_directories(
-    #${OPENCV_INCLUDE_DIR}
+    ${OPENCV_INCLUDE_DIR}
     ${PYTHON_INCLUDE_PATH}
     ${Boost_INCLUDE_DIRS}
     ${ZLIB_INCLUDE_DIR}
@@ -12,13 +16,11 @@ include_directories(
 )
 
 set(Image_LIBS
-    #${OPENCV_LIBRARIES}
+    ${OPENCV_LIBRARIES}
     FreeCADApp
 )
 
 set(Image_SRCS
-    #CaptureClass.cpp
-    #CaptureClass.h
     ImageBase.cpp
     ImageBase.h
     ImagePlane.cpp
