Intergrate Werners PCL Triangulation patch and upgrade it to PCL 1.7

--- a/src/Mod/ReverseEngineering/App/CMakeLists.txt
+++ b/src/Mod/ReverseEngineering/App/CMakeLists.txt
@@ -17,6 +17,7 @@ include_directories(
     ${ZLIB_INCLUDE_DIR}
     ${EIGEN3_INCLUDE_DIR}
     ${PCL_INCLUDE_DIRS}
+    ${FLANN_INCLUDE_DIRS}
 )
 
 link_directories(${OCC_LIBRARY_DIR})
