--- a/src/Mod/ReverseEngineering/App/CMakeLists.txt
+++ b/src/Mod/ReverseEngineering/App/CMakeLists.txt
@@ -4,7 +4,7 @@ else(MSVC)
     add_definitions(-DHAVE_LIMITS_H -DHAVE_CONFIG_H)
 endif(MSVC)
 
-if (PCL_SURFACE_FOUND AND PCL_FEATURES_FOUND AND PCL_KDTREE_FOUND)
+if (PCL_SURFACE_FOUND AND PCL_FEATURES_FOUND)
     add_definitions(-DHAVE_PCL_SURFACE)
 endif ()
 
@@ -30,6 +30,7 @@ set(Reen_LIBS
     ${PCL_COMMON_LIBRARIES}
     ${PCL_KDTREE_LIBRARIES}
     ${PCL_FEATURES_LIBRARIES}
+    ${PCL_SEARCH_LIBRARIES}
     ${PCL_SURFACE_LIBRARIES}
 )
 
