Part Module New Feature: Hyperbola & ArcOfHyperbola
- Completed Hyperbola c++ implementation and python wrapper
- Created ArOfHyperbola c++ and python wrapper implementation

--- a/src/Mod/Part/App/CMakeLists.txt
+++ b/src/Mod/Part/App/CMakeLists.txt
@@ -44,6 +44,7 @@ generate_from_xml(CirclePy)
 generate_from_xml(ArcOfEllipsePy)
 generate_from_xml(EllipsePy)
 generate_from_xml(HyperbolaPy)
+generate_from_xml(ArcOfHyperbolaPy)
 generate_from_xml(ParabolaPy)
 generate_from_xml(OffsetCurvePy)
 generate_from_xml(GeometryPy)
@@ -158,6 +159,8 @@ SET(Python_SRCS
     EllipsePyImp.cpp
     HyperbolaPy.xml
     HyperbolaPyImp.cpp
+    ArcOfHyperbolaPy.xml
+    ArcOfHyperbolaPyImp.cpp
     ParabolaPy.xml
     ParabolaPyImp.cpp
     OffsetCurvePy.xml
