--- a/src/Mod/Part/App/CMakeLists.txt
+++ b/src/Mod/Part/App/CMakeLists.txt
@@ -39,6 +39,7 @@ endif(FREETYPE_FOUND)
 
 generate_from_xml(ArcPy)
 generate_from_xml(ArcOfCirclePy)
+generate_from_xml(ArcOfParabolaPy)
 generate_from_xml(CirclePy)
 generate_from_xml(ArcOfEllipsePy)
 generate_from_xml(EllipsePy)
@@ -147,6 +148,8 @@ SET(Python_SRCS
     ArcPyImp.cpp
     ArcOfCirclePy.xml
     ArcOfCirclePyImp.cpp
+    ArcOfParabolaPy.xml
+    ArcOfParabolaPyImp.cpp
     CirclePy.xml
     CirclePyImp.cpp
     ArcOfEllipsePy.xml
